--- a/src/Containers/Landing/Landing.css
+++ b/src/Containers/Landing/Landing.css
@@ -1,50 +1,52 @@
-.text_1{
-	display:flex;
-	flex-direction:column;
-	justify-content:space-between;
-	align-items:center;
-	min-width:50%;
-	max-width:50%;
+.text_1 {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  min-width: 50%;
+  max-width: 50%;
 }
 
-.posters{
-	display:grid;
-	grid-template-columns: 100%;
-  	grid-template-rows: 100%;
-  	align-items:center;
-  	max-width:50%;
-  	min-width:50%;
-  	max-height:90vh;
+.posters {
+  width: 50%;
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-rows: 100%;
+  align-items: center;
+  max-width: 50%;
+  min-width: 50%;
+  max-height: 90vh;
 }
 
 @keyframes postersFadeInOut {
-  	0% {
-    opacity:1;
+  0% {
+    opacity: 1;
   }
   16% {
-    opacity:1;
+    opacity: 1;
   }
   25% {
-    opacity:0;
+    opacity: 0;
   }
   96% {
-    opacity:0;
+    opacity: 0;
   }
   100% {
-    opacity:1;
+    opacity: 1;
   }
 }
 
-.posters img{
-	-webkit-transition: opacity 1s ease-in-out;
-	-moz-transition: opacity 1s ease-in-out;
-	-o-transition: opacity 1s ease-in-out;
-	transition: opacity 1s ease-in-out;
-	
-	animation-name: postersFadeInOut;
-	animation-timing-function: ease-in-out;
-	animation-iteration-count: infinite;
-	animation-duration: 20s;
+.posters img {
+  -webkit-transition: opacity 1s ease-in-out;
+  -moz-transition: opacity 1s ease-in-out;
+  -o-transition: opacity 1s ease-in-out;
+  transition: opacity 1s ease-in-out;
+
+  animation-name: postersFadeInOut;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite;
+  animation-duration: 20s;
 }
 
 .posters img:nth-of-type(1) {
@@ -63,14 +65,13 @@
   animation-delay: 15s;
 }
 
-@media(max-width:720px){
-	.posters{
-		min-width:90%;
-		max-width:90%;
-	}
-	.text_1{
-		min-width:90%;
-		max-width:90%;
-		
-	}
+@media (max-width: 720px) {
+  .posters {
+    min-width: 90%;
+    max-width: 90%;
+  }
+  .text_1 {
+    min-width: 90%;
+    max-width: 90%;
+  }
 }
