--- a/src/Containers/Landing/Landing2.module.css
+++ b/src/Containers/Landing/Landing2.module.css
@@ -1,45 +1,45 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&family=Yellowtail&display=swap');
 .Landing {
-	display: flex;
-	align-items: center;
+  width: 100%;
+  display: flex;
+  align-items: center;
 }
 
 .acc {
-	width: 50%;
-	margin: 5%;
-	margin-top: 10%;
-	margin-left: 0%;
+  width: 50%;
+  margin: 5%;
+  margin-top: 10%;
+  margin-left: 0%;
 }
 
 .image {
-	width: 50%;
-	margin: 5%;
-	margin-top: 10%;
+  width: 50%;
+  height: auto;
+  margin: 5%;
+  margin-top: 10%;
 }
-.how{
-	 font-family: 'Roboto', sans-serif;
-	 color: #e7513b;
-	 margin-top: 0%;
+.how {
+  font-family: 'Roboto', sans-serif;
+  color: #e7513b;
+  margin-top: 0%;
 }
 
+@media (max-width: 720px) {
+  .Landing {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 5%;
+  }
 
+  .acc {
+    width: 100%;
+    margin: 0 auto;
+  }
 
-@media (max-width: 720px){
-	.Landing{
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-		margin: 5%;
-	}
-
-	.acc {
-		width: 100%;
-		margin: 0 auto;	 
-	}
-
-	.image{
-		margin:0 auto;
-		width: 100%;
-		margin-bottom: 5%;
-	}
+  .image {
+    margin: 0 auto;
+    width: 100%;
+    margin-bottom: 5%;
+  }
 }
